<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tl_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/app_name"
                android:paddingStart="5dp"
                android:paddingTop="20dp"
                android:paddingEnd="15dp"
                android:paddingBottom="20dp"
                android:src="@drawable/toolbar_close"
                tools:ignore="RtlSymmetry" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/tv_done"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:id="@+id/tv_det_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/app_name"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/done"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/border_line_color_two" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_toolbar">

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_crect_white_round_with_shadow"
            android:focusableInTouchMode="true"
            tools:ignore="UselessParent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchview"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@color/transparent"
                android:lineSpacingExtra="0dp"
                android:lineSpacingMultiplier="0"
                android:queryBackground="@android:color/transparent"
                android:queryHint="@string/type_to_search"
                app:font_name="Montserrat-Regular.otf"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:searchHintIcon="@drawable/search_on"
                app:searchIcon="@drawable/search_on" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_search"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/tvNoContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/tv_no_contacts"
            android:visibility="gone" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="visible" />

</RelativeLayout>