<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mcpapp="http://schemas.android.com/apk/com.l4digital.fastscroll"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_centerVertical="true"
            android:background="?colorPrimary"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="center"
            android:text="@string/skip"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_toRightOf="@+id/skip"
            android:background="?colorPrimary"
            app:popupTheme="?mcpListPopupWindowStyleTheme"
            app:theme="?mcpToolbarTheme"
            tools:ignore="RtlHardcoded" />

        <com.miguelcatalan.materialsearchview.MaterialSearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.wafflecopter.multicontactpicker.MultiContactPickerActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/controlPanel">

            <com.l4digital.fastscroll.FastScrollRecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                mcpapp:bubbleColor="@color/azureColorPrimaryDark"
                mcpapp:bubbleTextColor="#ffffff"
                mcpapp:handleColor="@color/azureColorPrimaryDark"
                mcpapp:hideScrollbar="false"
                mcpapp:showTrack="false"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical|center_horizontal"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvNoContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_no_contacts"
                android:visibility="gone" />
        </FrameLayout>


        <LinearLayout
            android:id="@+id/controlPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="right"
            android:orientation="vertical"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="false"
                android:background="@color/border_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSelectAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:enabled="false"
                    android:focusable="true"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp"
                    android:text="@string/tv_select_all_btn_text"
                    android:textColor="@color/selector_contact_select_text"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvSelect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="right"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:enabled="false"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="15dp"
                    android:text="@string/tv_select_btn_text_disabled"
                    android:textColor="@color/selector_contact_select_text"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>